--- a/quizfrontend/src/app/css/acss/acss.css
+++ b/quizfrontend/src/app/css/acss/acss.css
@@ -1,7 +1,7 @@
 :root {
-    --primary-color:red;
-    --secondary-color: blue;
-    --tertiary-color: orange;
+ --primary-color:purple;
+ --secondary-color:orange;
+ --tertiary-color:lightyellow;
 }
 
 
