--- a/quizfrontend/src/app/css/acss/acss.css
+++ b/quizfrontend/src/app/css/acss/acss.css
@@ -1,7 +1,7 @@
 :root {
- --primary-color:purple;
- --secondary-color:orange;
- --tertiary-color:lightyellow;
+ --primary-color:#001F3F;
+ --secondary-color:#4169E1;
+ --tertiary-color:#f8f9fa;
 }
 
 
