--- a/quizfrontend/src/app/globals.css
+++ b/quizfrontend/src/app/globals.css
@@ -1,7 +1,7 @@
 :root {
- --primary-color:#001F3F;
- --secondary-color:#4169E1;
- --tertiary-color:#f8f9fa;
+ --primary-color:#355E3B;
+ --secondary-color:#437C17;
+ --tertiary-color:#8A9A5B;
 }
 
 .select{
