--- a/quizfrontend/src/app/css/acss/acss.css
+++ b/quizfrontend/src/app/css/acss/acss.css
@@ -1,7 +1,7 @@
 :root {
- --primary-color:#001F3F;
- --secondary-color:#4169E1;
- --tertiary-color:#f8f9fa;
+ --primary-color:#355E3B;
+ --secondary-color:#437C17;
+ --tertiary-color:#8A9A5B;
 }
 
 .select{
@@ -613,6 +613,47 @@ body{
     max-height: 150px;
 }
 
+.vh-100{
+    height:100vh;
+}
+
+.vh-90{
+    height:90vh;
+}
+
+.vh-80{
+    height:80vh;
+}
+
+.vh-70{
+    height:70vh;
+}
+
+.vh-60{
+    height:60vh;
+}
+
+.vh-50{
+    height:50vh;
+}
+
+.vh-40{
+    height:40vh;
+}
+
+.vh-30{
+    height:30vh;
+}
+
+.vh-20{
+    height:20vh;
+}
+
+.vh-10{
+    height:10vh;
+}
+
+
 @media(max-width:600px) {
     .display-sm-none {
         display: none;
@@ -758,6 +799,14 @@ body{
 .h-sm-100{
     height:100%;
 }
+
+.color-bg-sm-white{
+    background-color:white;
+}
+.color-bg-sm-black{
+    background-color:black;
+}
+
 }
 
 @media(min-width:600px) {
@@ -820,6 +869,15 @@ body{
     font-size: 48px;
 }
 
+.sz-md-50 {
+    font-size: 50px;
+}
+
+.sz-md-70 {
+    font-size: 70px;
+}
+
+
 .sz-md-60 {
     font-size: 60px;
 }
@@ -855,6 +913,54 @@ body{
 .h-md-100{
     height:100%;
 }
+
+.vh-md-100{
+    height:100vh;
+}
+
+.vh-md-90{
+    height:90vh;
+}
+
+.vh-md-80{
+    height:80vh;
+}
+
+.vh-md-70{
+    height:70vh;
+}
+
+.vh-md-60{
+    height:60vh;
+}
+
+.vh-md-50{
+    height:50vh;
+}
+
+.vh-md-40{
+    height:40vh;
+}
+
+.vh-md-30{
+    height:30vh;
+}
+
+.vh-md-20{
+    height:20vh;
+}
+
+.vh-md-10{
+    height:10vh;
+}
+
+.color-bg-md-white{
+    background-color:white;
+}
+.color-bg-md-black{
+    background-color:black;
+}
+
 }
 
 
