--- a/quizfrontend/src/app/globals.css
+++ b/quizfrontend/src/app/globals.css
@@ -1,8 +1,8 @@
 :root {
   --primary-color:#059669;
-  --primary-color:#065F46;
- --secondary-color:#10B981;
- --tertiary-color:#E7F9E9;
+  --primary-color:#FF9800;
+ --secondary-color:#444444;
+ --tertiary-color:#1bbca3;
  --hover-color:#22C55E;
  --highlight-color:#A3E635;
 }
